model/traefik/production/gitops-traefik-middleware-custom.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-custom-headers
  namespace: default
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
