model/traefik/production/gitops-traefik-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace:  default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.allanandvaia.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-homeassistant
          namespace:  traefik
          port: 8123
          scheme: http        
    - match: Host(`canopus.hosts.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-canopus
          namespace:  traefik
          port: 8000
          scheme: http        
    - match: Host(`polaris.hosts.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-polaris
          namespace:  traefik
          port: 8006
          scheme: https        
    - match: Host(`rigel.hosts.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-rigel
          namespace:  traefik
          port: 80
          scheme: http        
    - match: Host(`procyon.hosts.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-procyon
          namespace:  traefik
          port: 80
          scheme: http        
    - match: Host(`bellatrix.syncthing.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-syncthing-bellatrix
          namespace:  traefik
          port: 8384
          scheme: http        
    - match: Host(`mimosa.syncthing.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-syncthing-mimosa
          namespace:  traefik
          port: 8384
          scheme: http        
    - match: Host(`rigel.syncthing.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-syncthing-rigel
          namespace:  traefik
          port: 20910
          scheme: http        
    - match: Host(`photos.allanandvaia.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-immich
          namespace:  traefik
          port: 2283
          scheme: http        
    - match: Host(`radarr.docker.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: default
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-radarr
          namespace:  traefik
          port: 31300
          scheme: http        
    - kind: Rule
      match: "Host(`radarr.docker.allanshomelab.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - match: Host(`sonarr.docker.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: default
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: gitops-traefik-endpoint-sonarr
          namespace:  traefik
          port: 31200
          scheme: http        
    - kind: Rule
      match: "Host(`sonarr.docker.allanshomelab.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
  tls:
    secretName: production-tls
